--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-chrono": "^2.3.1",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.19.0",
     "react-tilt": "^1.0.2",
