--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.5",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-chrono": "^2.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.6",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.19.0",
     "react-tilt": "^1.0.2",
