--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.6",
+    "react-parallax": "^3.5.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.19.0",
     "react-tilt": "^1.0.2",
