--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "dotenv": "^16.3.1",
+    "emailjs": "^4.0.3",
     "framer-motion": "^10.16.5",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^2.15.0",
