--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.16.5",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-chrono": "^2.3.1",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.6",
     "react-parallax": "^3.5.1",
