--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -24,6 +24,7 @@
     "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.19.0",
+    "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2"
   },
   "devDependencies": {
