--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.16.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-chrono": "^2.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
