--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^6.19.0",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.1",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
