--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "emailjs": "^4.0.3",
