--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "life-goats-app",
+  "homepage": "https://lifegoats.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
