--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "chart.js": "^4.4.2",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "dotenv": "^16.3.1",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.16.5",
     "leaflet": "^1.9.4",
+    "primereact": "^10.6.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-chrono": "^2.3.1",
