--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.16.5",
+    "html-react-parser": "^5.1.10",
     "leaflet": "^1.9.4",
     "primereact": "^10.6.6",
     "react": "^18.2.0",
