--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -38,10 +38,12 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.1.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
+    "eslint-config-next": "^15.1.2",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
