--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -13,14 +13,19 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.7",
     "emailjs": "^4.0.3",
+    "emitter": "^0.0.5",
     "framer-motion": "^11.15.0",
     "html-react-parser": "^5.1.10",
+    "inline-css": "^4.0.2",
+    "juice": "^11.0.0",
     "leaflet": "^1.9.4",
     "next": "^15.0.3",
+    "node-fetch": "^3.3.2",
     "primereact": "^10.6.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
