--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.15.0",
     "html-react-parser": "^5.1.10",
     "leaflet": "^1.9.4",
+    "mongodb": "^6.12.0",
     "next": "^15.0.3",
     "primereact": "^10.6.6",
     "react": "^18.2.0",
@@ -41,13 +42,13 @@
     "@next/eslint-plugin-next": "^15.1.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.45.0",
     "eslint-config-next": "^15.1.2",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.4"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
