--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.9.4",
     "mongodb": "^6.12.0",
     "next": "^15.0.3",
+    "nodemailer": "^6.9.16",
     "primereact": "^10.6.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
