--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.7",
@@ -20,6 +21,7 @@
     "framer-motion": "^11.15.0",
     "html-react-parser": "^5.1.10",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "mongodb": "^6.12.0",
     "next": "^15.0.3",
     "nodemailer": "^6.9.16",
@@ -28,7 +30,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-chrono": "^2.3.1",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
+    "react-leaflet": "^5.0.0-rc.1",
     "react-map-gl": "^7.1.6",
     "react-parallax": "^3.5.1",
     "react-responsive": "^9.0.2",
