--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.15.0",
+    "fs": "^0.0.1-security",
     "html-react-parser": "^5.1.10",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
