--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -38,7 +38,8 @@
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.1",
     "react-tilt": "^1.0.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.4",
