--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -27,10 +27,10 @@
     "next": "^15.3.4",
     "nodemailer": "^7.0.4",
     "primereact": "^10.9.6",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1",
-    "react-leaflet": "^5.0.0-rc.1",
+    "react-dom": "18.3.1",
+    "react-leaflet": "5.0.0-rc.1",
     "react-parallax": "^3.5.2",
     "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.2",
