--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -24,13 +24,13 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "mongodb": "^6.17.0",
-    "next": "^15.3.4",
+    "next": "^15.3.8",
     "nodemailer": "^7.0.4",
     "primereact": "^10.9.6",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
-    "react-leaflet": "5.0.0-rc.1",
+    "react-leaflet": "^4.2.1",
     "react-parallax": "^3.5.2",
     "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.2",
