--- a/client/life-goats-app/package.json
+++ b/client/life-goats-app/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "dotenv": "^17.0.0",
@@ -21,16 +20,15 @@
     "framer-motion": "^12.19.2",
     "fs": "^0.0.1-security",
     "html-react-parser": "^5.2.5",
-    "leaflet": "^1.9.4",
-    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "mapbox-gl": "^3.18.1",
     "mongodb": "^6.17.0",
-    "next": "^15.5.11",
+    "next": "^16.1.6",
     "nodemailer": "^7.0.4",
     "primereact": "^10.9.6",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
-    "react-leaflet": "^4.2.1",
+    "react-map-gl": "^8.1.0",
     "react-parallax": "^3.5.2",
     "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.2",
